--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,193 @@
-body {
-  background-color: whitesmoke;
+* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
+body {
+  background-color: black;
+  box-sizing: border-box;
+  color: whitesmoke;
+}
+
+header {
+  background-color: #141414;
+  height: 50px;
+  padding-top: 5px;
+  text-align: center;
+}
+
+.react-link {
+  color: #559cbd;
+  font-size: 12px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.movies {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-start;
+}
+
+.div-links {
+  background-color: #141414;
+  height: 30px;
+  padding-top: 5px;
+  text-align: center;
+}
+
+.movie-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  padding: 40px 20px;
+}
+
+.movie-card {
+  background-color: #141414;
+  border: 1px solid #141414;
+  border-radius: 2%;
+  box-shadow: 2px 2px 3px #2c2c2c;
+  display: flex;
+  flex-flow: column wrap;
+  height: 350px;
+  justify-content: space-between;
+  margin: 10px;
+  width: 250px;
+}
+
+.movie-card:hover {
+  box-shadow: 2px 2px 4px #4a4b4b , -2px -2px 4px #4a4b4b;
+  transform: scale(1.2);
+  transition: 0.5s;
+}
+
+.img-card {
+  border-radius: 2%;
+  width: 248px;
+}
+
+.title-card {
+  margin: 10px;
+}
+
+.storyline-card {
+  color: #bbb;
+  font-size: 14px;
+  margin: 10px;
+}
+
+.link-card {
+  margin-bottom: 20px;
+  margin-left: 140px;
+  margin-top: 10px;
+}
+
+.movie-details {
+  background-color: #141414;
+  height: 530px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 450px;
+}
+
+.img-details {
+  height: 250px;
+  width: 449px;
+}
+
+.title-details {
+  margin: 10px 20px;
+}
+
+.details {
+  align-items: flex-start;
+  display: flex;
+  flex-flow: column wrap;
+  height: 200px;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.link-details {
+  margin-left: 50px;
+  margin-right: 40px;
+}
+
+form {
+  background-color: #141414;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  padding: 30px;
+  width: 450px;
+}
+
+label {
+  align-items: baseline;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+input {
+  font-size: 14px;
+  height: 25px;
+  margin: 10px;
+  padding: 5px;
+  width: 300px;
+}
+
+.genre-label-input {
+  align-items: baseline;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+textarea {
+  font-size: 14px;
+  height: 100px;
+  margin: 10px;
+  padding: 5px;
+  width: 300px;
+}
+
+select {
+  font-size: 14px;
+  height: 30px;
+  margin: 10px 20px;
+  padding: 5px;
+  width: 100px;
+}
+
+button {
+  box-shadow: 2px 2px 3px #2c2c2c;
+  font-size: 16px;
+  font-weight: 600;
+  height: 25px;
+  margin-left: 160px;
+  margin-top: 10px;
+  padding: 2px 5px;
+  width: 100px;
+}
+
+button:active {
+  box-shadow: 2px 2px 1px #2c2c2c;
+  color: #141414;
+}
+
+footer {
+  color: #bbb;
+  font-size: 12px;
+  margin: 10px;
+  text-align: center;
+}
+
+.link {
+  color: #559cbd;
+  font-size: 12px;
+  font-weight: 600;
+  text-decoration: none;
+}
